Improved the swagger api documentation.
