# pkg/api/handlers/firmwares.go
@@ -8,6 +8,14 @@ import (
 )
 
 
+// swagger:route GET /firmwares Firmware-Operations firmwares
+// List all firmwares on file
+// responses:
+//	202: firmwaresResponse
+//  404: genericError
+//  406: validationError
+//  500: genericError
+
 // AllFirmwares a list of  []Firmware
 func (c *Controller) AllFirmwares(rw http.ResponseWriter, r *http.Request) {
 	level.Debug(c.logger).Log( "api-method", "AllFirmwares() called")
@@ -15,13 +23,22 @@ func (c *Controller) AllFirmwares(rw http.ResponseWriter, r *http.Request) {
 
 	body := c.service.AllFirmwares()
 
-	rw.WriteHeader(http.StatusOK)
+	rw.WriteHeader(http.StatusAccepted)
 	err := ToJSON(body, rw)
 	if err != nil {
 		rw.WriteHeader(http.StatusInternalServerError)
 		level.Error(c.logger).Log( "error", err.Error())
 	}
 }
+
+
+// swagger:route POST /createFirmware Firmware-Operations createFirmware
+// Add a new homie firmware to the collection
+// responses:
+//	202: firmwareIdResponse
+//  404: genericError
+//  406: validationError
+//  500: genericError
 
 // CreateFirmwareRequest upload a new firmware
 type CreateFirmwareRequest struct {
@@ -54,14 +71,14 @@ func (c *Controller) CreateFirmware(rw http.ResponseWriter, r *http.Request) {
 		c.logger.Log("validation", errs)
 
 		// return the validation messages as an array
-		rw.WriteHeader(http.StatusUnprocessableEntity)
+		rw.WriteHeader(http.StatusNotAcceptable)
 		ToJSON(&errs, rw)
 		return
 	}
 
 	body, err := c.service.CreateFirmware(cfr.SrcFile, cfr.DstFile)
 	if err == nil {
-		rw.WriteHeader(http.StatusOK)
+		rw.WriteHeader(http.StatusAccepted)
 		err := ToJSON(CreateFirmwareResponse{string(body)}, rw)
 		if err != nil {
 			rw.WriteHeader(http.StatusInternalServerError)
@@ -73,6 +90,15 @@ func (c *Controller) CreateFirmware(rw http.ResponseWriter, r *http.Request) {
 		ToJSON(&GenericError{Message: err.Error()}, rw)
 	}
 }
+
+
+// swagger:route GET /firmwareById/{firmwareID} Firmware-Operations firmwareById
+// Get specific firmware details
+// responses:
+//	202: firmwareResponse
+//  404: genericError
+//  406: validationError
+//  500: genericError
 
 // FirmwareByID (firmwareID EID) (Firmware, error)
 func (c *Controller) FirmwareByID(rw http.ResponseWriter, r *http.Request) {
@@ -91,7 +117,7 @@ func (c *Controller) FirmwareByID(rw http.ResponseWriter, r *http.Request) {
 
 	body, err := c.service.FirmwareByID(dc.EID(vars["firmwareID"]))
 	if err == nil {
-		rw.WriteHeader(http.StatusOK)
+		rw.WriteHeader(http.StatusAccepted)
 		err := ToJSON(body, rw)
 		if err != nil {
 			rw.WriteHeader(http.StatusInternalServerError)
@@ -103,6 +129,14 @@ func (c *Controller) FirmwareByID(rw http.ResponseWriter, r *http.Request) {
 		ToJSON(&GenericError{Message: err.Error()}, rw)
 	}
 }
+
+
+// swagger:route GET /firmwareByName/{firmwareName} Firmware-Operations firmwareByName
+// Get specific firmware details
+// responses:
+//	202: firmwareResponse
+//  404: genericError
+//  500: genericError
 
 // FirmwareByName (firmwareName string) (Firmware, error)
 func (c *Controller) FirmwareByName(rw http.ResponseWriter, r *http.Request) {
@@ -113,7 +147,7 @@ func (c *Controller) FirmwareByName(rw http.ResponseWriter, r *http.Request) {
 
 	body, err := c.service.FirmwareByName(vars["firmwareName"])
 	if err == nil {
-		rw.WriteHeader(http.StatusOK)
+		rw.WriteHeader(http.StatusAccepted)
 		err := ToJSON(body, rw)
 		if err != nil {
 			rw.WriteHeader(http.StatusInternalServerError)
@@ -125,6 +159,13 @@ func (c *Controller) FirmwareByName(rw http.ResponseWriter, r *http.Request) {
 		ToJSON(&GenericError{Message: err.Error()}, rw)
 	}
 }
+
+
+// swagger:route DELETE /removeFirmwareId/{firmwareID} Firmware-Operations removeFirmwareId
+// delete a specific firmware and filesystem file
+// responses:
+//	204: noContentResponse
+//  406: validationError
 
 // RemoveFirmwareID (firmwareID EID)
 func (c *Controller) RemoveFirmwareID(rw http.ResponseWriter, r *http.Request) {
